# brc-tools

./: .env.example  .gitignore  .mcp.json  AGENT-INDEX.md  AGENTS.md  BRC-TOOLS-APRIL-PLAN.md  CLAUDE-CODE-WORKFLOW.md  CLAUDE-INDEX.md  CLAUDE-TEAM-GUIDE.md  CLAUDE.md  COPILOT-BRANCH-CHAT.md  MIGRATION-NOTES.md  POST-MERGE-CHECKLIST.md  PRUNING_PR_DESCRIPTION.md  PR_DESCRIPTION.md  README.md  READY-FOR-LIVE.md  REAL-WORLD-TESTING.md  ROADS.md  UDOT_CAMERAS.md  WISHLIST-TASKS.md  environment.yml  gemini_parallel-aqm.py  gemini_tryhard_hrrr.py  get_aviation247_posts.py  hrrr_drybulb_option.py  pyproject.toml  requirements.txt  run_upload.sh  setup_config.py  test_pipeline.py  test_pipeline_simple.py
.github/: CODEOWNERS
data/: README.md
docs/: API-CLIENTS.md  API-REFERENCE.md  AVIATION-AIRPORTS.md  CASE-STUDY-GUIDE.md  CHPC-REFERENCE.md  CROSS-REPO-INTEGRATION.md  CROSS-REPO-SYNC.md  ENVIRONMENT-SETUP.md  FORECAST-FUNNEL.md  HANDOFF-TO-BRC-WRF-HYGIENE.md  HANDOFF-TO-BRC-WRF.md  HRRR-ROAD-FORECAST-SPEC.md  MODIS-CONTEXT-RENDERER.md  NWP-DATA-GUIDE.md  NWP-THEORETICAL-WISHLIST.md  PIPELINE-ARCHITECTURE.md  README.md  TESTING-GUIDE.md  WEBSITE-INTEGRATION.md  WRF-ANALYSIS-FIGURES.md  WRF-FIGURE-ENGINE.md  WRF-FIGURES-ROBUSTNESS-HANDOFF.md  WRF-GEFS-NAM-FIELD-MAP.md  WRF-INPUT-STAGING.md  WRF-STAGING-STATE-PLAYBOOK.md
download/: README.md  ubair.py
examples/: README.md
in_progress/: README.md  download_aqm.ipynb  download_hrrr.ipynb  download_rrfs.ipynb  xsection.ipynb
issues/: 1.md
reference/: BRC-TOOLS-SETUP.md  FLIGHTAWARE-API.md  FLIGHTAWARE-SPEC.md
resources/: README.md
scripts/: basin_floor_ozone_snow.dtn.slurm  basin_floor_ozone_snow.py  case_study_20250222.py  case_study_kvel_foehn.py  case_study_kvel_westerly.py  check_wrf_doc_freshness.py  export_hrrr_kvel_crosswind.py  export_hrrr_surface_layers.py  export_hrrr_waypoint_forecast.py  fetch_aqs_airdata.py  fetch_basemap.dtn.slurm  fetch_basemap.py  fetch_soundings.py  forecast_funnel.dtn.slurm  forecast_funnel.py  widb.py  (+13 more)
(+203 files in other folders)
